# bzl.nvim

./: .gitignore  LICENSE  Makefile  README.md  flake.nix
.github/workflows/: ci.yml
lua/bzl/: cli.lua  config.lua  health.lua  init.lua  picker.lua  python.lua  runner.lua  targets.lua  tree.lua
plugin/: bzl.lua
scripts/: minimal_init.lua
tests/: test_bzl.lua  test_picker.lua  test_python.lua  test_runner.lua  test_targets.lua  test_tree.lua
tests/fixture/: BUILD.bazel  MODULE.bazel  failing_test.sh  hello.sh  hello_test.sh
tests/fixture/lib/: BUILD.bazel  greet.sh
